--- a/app_noticias/templates/app_noticias/resumo.html
+++ b/app_noticias/templates/app_noticias/resumo.html
@@ -7,5 +7,8 @@
 <body>
 <h1>Resumo das notícias</h1>
 <p>Quantidade de notícias {{ total }}.</p>
+<p>Quantidade de Denúncias por Estado: {{ state }}.</p>
+<p>Quantidade de Denúncias por Cidade: {{ city }}.</p>
+
 </body>
 </html>
